[package]
name = "libccar_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.1"
egui = "0.32.1"
egui_extras = "0.32.1"
egui_plot = "0.33"
glam = "0.30.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rfd = "0.15.4"
anyhow = "1.0"
once_cell = "1.18"
time = { version = "0.3", features = ["formatting"] }

[build-dependencies]
bindgen = "0.72"
