[package]
name = "libccar_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.32.1", features = ["android-game-activity"] }
egui = "0.32.1"
egui_extras = "0.32.1"
egui_plot = "0.33"
glam = "0.30.5"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
time = { version = "0.3", features = ["formatting"] }
gilrs = "0.11.0"
splines = { version = "5.0.0", features = ["glam"] }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
android-activity = "0.6.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
serde_json = "1.0"
csv = "1.3"
rfd = "0.15.4"
anyhow = "1.0"

[build-dependencies]
bindgen = "0.72"
cc = "1.0"

[features]
link-system = []

[package.metadata.android]
package_name = "com.libccar.demo"
label = "libccar"
